// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CarCard component renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_carCard_187b3e"
      >
        <img
          class="_carImage_187b3e"
          src="https://image.com"
        />
        <div
          class="_carInfo_187b3e"
        >
          <div>
            <h3>
              2002
               
              Suzuki
            </h3>
            <p>
              200
               km | 
              1
               | 
              Worli
              ,
               
              Mumbai
            </p>
          </div>
          <div
            class="_carEMIAndPrice_187b3e"
          >
            <p>
              Rs. 
              12
            </p>
            <p>
              Starts from Rs. 12 Lakh
            </p>
          </div>
          <p>
            Make Offer
          </p>
          <button
            class="_carSellerButton_187b3e"
          >
            Get Seller info
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_carCard_187b3e"
    >
      <img
        class="_carImage_187b3e"
        src="https://image.com"
      />
      <div
        class="_carInfo_187b3e"
      >
        <div>
          <h3>
            2002
             
            Suzuki
          </h3>
          <p>
            200
             km | 
            1
             | 
            Worli
            ,
             
            Mumbai
          </p>
        </div>
        <div
          class="_carEMIAndPrice_187b3e"
        >
          <p>
            Rs. 
            12
          </p>
          <p>
            Starts from Rs. 12 Lakh
          </p>
        </div>
        <p>
          Make Offer
        </p>
        <button
          class="_carSellerButton_187b3e"
        >
          Get Seller info
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Listing component renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_container_187b3e"
      >
        <div
          class="_filterContainer_187b3e"
        >
          <p>
            Sort by: 
          </p>
          <select>
            <option
              value="1"
            >
              Unsorted
            </option>
            <option
              value="2"
            >
              Price: Low to high
            </option>
            <option
              value="3"
            >
              Price: High to low
            </option>
          </select>
        </div>
        <div
          class="_carCard_187b3e"
        >
          <img
            class="_carImage_187b3e"
            src="https://image.com"
          />
          <div
            class="_carInfo_187b3e"
          >
            <div>
              <h3>
                2002
                 
                Suzuki
              </h3>
              <p>
                200
                 km | 
                1
                 | 
                Worli
                ,
                 
                Mumbai
              </p>
            </div>
            <div
              class="_carEMIAndPrice_187b3e"
            >
              <p>
                Rs. 
                12
              </p>
              <p>
                Starts from Rs. 12 Lakh
              </p>
            </div>
            <p>
              Make Offer
            </p>
            <button
              class="_carSellerButton_187b3e"
            >
              Get Seller info
            </button>
          </div>
        </div>
        <div
          class="_carCard_187b3e"
        >
          <img
            class="_carImage_187b3e"
            src="https://image.com"
          />
          <div
            class="_carInfo_187b3e"
          >
            <div>
              <h3>
                2002
                 
                Mazda
              </h3>
              <p>
                200
                 km | 
                1
                 | 
                Worli
                ,
                 
                Mumbai
              </p>
            </div>
            <div
              class="_carEMIAndPrice_187b3e"
            >
              <p>
                Rs. 
                12
              </p>
              <p>
                Starts from Rs. 12 Lakh
              </p>
            </div>
            <p>
              Make Offer
            </p>
            <button
              class="_carSellerButton_187b3e"
            >
              Get Seller info
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_container_187b3e"
    >
      <div
        class="_filterContainer_187b3e"
      >
        <p>
          Sort by: 
        </p>
        <select>
          <option
            value="1"
          >
            Unsorted
          </option>
          <option
            value="2"
          >
            Price: Low to high
          </option>
          <option
            value="3"
          >
            Price: High to low
          </option>
        </select>
      </div>
      <div
        class="_carCard_187b3e"
      >
        <img
          class="_carImage_187b3e"
          src="https://image.com"
        />
        <div
          class="_carInfo_187b3e"
        >
          <div>
            <h3>
              2002
               
              Suzuki
            </h3>
            <p>
              200
               km | 
              1
               | 
              Worli
              ,
               
              Mumbai
            </p>
          </div>
          <div
            class="_carEMIAndPrice_187b3e"
          >
            <p>
              Rs. 
              12
            </p>
            <p>
              Starts from Rs. 12 Lakh
            </p>
          </div>
          <p>
            Make Offer
          </p>
          <button
            class="_carSellerButton_187b3e"
          >
            Get Seller info
          </button>
        </div>
      </div>
      <div
        class="_carCard_187b3e"
      >
        <img
          class="_carImage_187b3e"
          src="https://image.com"
        />
        <div
          class="_carInfo_187b3e"
        >
          <div>
            <h3>
              2002
               
              Mazda
            </h3>
            <p>
              200
               km | 
              1
               | 
              Worli
              ,
               
              Mumbai
            </p>
          </div>
          <div
            class="_carEMIAndPrice_187b3e"
          >
            <p>
              Rs. 
              12
            </p>
            <p>
              Starts from Rs. 12 Lakh
            </p>
          </div>
          <p>
            Make Offer
          </p>
          <button
            class="_carSellerButton_187b3e"
          >
            Get Seller info
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
